--- a/Views/RatePage.xaml
+++ b/Views/RatePage.xaml
@@ -11,15 +11,15 @@
         <StackLayout Orientation="Vertical">
             <AbsoluteLayout>
                 <Frame
-                AbsoluteLayout.LayoutBounds="0.5,1, 1, 1"
+                AbsoluteLayout.LayoutBounds="0.51,0.8, 1, 1"
                 AbsoluteLayout.LayoutFlags="PositionProportional"
-                HeightRequest="350"
+                HeightRequest="325"
                 WidthRequest="250"
                 HasShadow="False"
                 CornerRadius="60"
                 BorderColor="#000000"
                 BackgroundColor="#2A2A2A"
-                Margin="20, 10, 30, 10"/>
+                Margin="20, 350, 30, 10"/>
             </AbsoluteLayout>
             <Frame
                 HeightRequest="200"
@@ -29,53 +29,93 @@
                 Margin="20, 10, 20, 10">
                 <Image Source="{Binding Image}" WidthRequest="300" HeightRequest="300"/>
             </Frame>
-            <Label x:Name="ArtistLabel" Text="{Binding Artist}" />
-            <Label x:Name="SongNameLabel" Text="{Binding Song_Name}" />
+            <StackLayout HorizontalOptions="Center">
+                <Frame
+                    Margin="0, 0, 0, 0"
+                    HasShadow="False"
+                    HeightRequest="60"
+                    WidthRequest="240"
+                    BackgroundColor="Transparent"
+                    HorizontalOptions="Center">
+                    <Label x:Name="ArtistLabel" Text="{Binding Artist}" TextColor="#FFFFFF" FontSize="Small" Opacity="0.56" HorizontalOptions="Center"/>
+                </Frame>
+                <Frame
+                    HeightRequest="60"
+                    WidthRequest="240"
+                    Margin="0, -30, 0, 0"
+                    HasShadow="False"
+                    BackgroundColor="Transparent"
+                    HorizontalOptions="Center">
+                    <Label x:Name="SongNameLabel" Text="{Binding Song_Name}" TextColor="#FFFFFF" FontSize="Medium" HorizontalOptions="Center"/>
+                </Frame>
+            </StackLayout>
         </StackLayout>
-        <WebView x:Name="SoundCloudWebView"
+        <StackLayout>
+            <Frame
+                BackgroundColor="Transparent"
+                HeightRequest="300"
+                Margin="0, 20, 0, 0"
+                >
+                <WebView x:Name="SoundCloudWebView"
                  HorizontalOptions="FillAndExpand"
                  VerticalOptions="FillAndExpand" 
                  Source="{Binding Link}"/>
+            </Frame>
+        </StackLayout>
+        <StackLayout Orientation="Horizontal">
+            <VerticalStackLayout HorizontalOptions="Center" Margin="80, 0, 10, 0">
+                <Label Text="Rhymes" TextColor="#FFFFFF"/>
+                <HorizontalStackLayout>
+                    <Slider x:Name="RhymesSlider" ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="10" Value="{Binding Rhymes, Mode=TwoWay}" />
+                    <Label x:Name ="RhymesLabel" Text="" TextColor="#FFFFFF"/>
+                </HorizontalStackLayout>
+            </VerticalStackLayout>
 
-        <Label Text="Rhymes" />
-        <HorizontalStackLayout>
-            <Slider x:Name="RhymesSlider" ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="10" Value="{Binding Rhymes, Mode=TwoWay}" />
-            <Label x:Name ="RhymesLabel" Text="" />
-        </HorizontalStackLayout>
+            <VerticalStackLayout HorizontalOptions="Center" Margin="0, 0, 10, 0">
+                <Label Text="Structure" TextColor="#FFFFFF" />
+                <HorizontalStackLayout>
+                    <Slider x:Name="StructureSlider" ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="10" Value="{Binding Structure, Mode=TwoWay}" />
+                    <Label x:Name="StructureLabel" Text="" TextColor="#FFFFFF"/>
+                </HorizontalStackLayout>
+            </VerticalStackLayout>
 
-        <Label Text="Structure" />
-        <HorizontalStackLayout>
-            <Slider x:Name="StructureSlider" ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="10" Value="{Binding Structure, Mode=TwoWay}" />
-            <Label x:Name="StructureLabel" Text="" />
-        </HorizontalStackLayout>
+            <VerticalStackLayout HorizontalOptions="Center">
+                <Label Text="Style realization" TextColor="#FFFFFF"/>
+                <HorizontalStackLayout>
+                    <Slider x:Name="StyleRealizationSlider" ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="10" Value="{Binding Style_realization, Mode=TwoWay}" />
+                    <Label x:Name="StyleRealizationLabel" Text="" TextColor="#FFFFFF"/>
+                </HorizontalStackLayout>
+            </VerticalStackLayout>
+        </StackLayout>
+        <StackLayout Orientation="Horizontal">
+            <VerticalStackLayout HorizontalOptions="Center" Margin="80, 0, 10, 0">
+                <Label Text="Individuality" TextColor="#FFFFFF"/>
+                <HorizontalStackLayout>
+                    <Slider x:Name="IndividualitySlider" ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="10" Value="{Binding Individuality, Mode=TwoWay}" />
+                    <Label  x:Name="IndividualityLabel" Text="" TextColor="#FFFFFF"/>
+                </HorizontalStackLayout>
+            </VerticalStackLayout>
 
-        <Label Text="Style realization" />
-        <HorizontalStackLayout>
-            <Slider x:Name="StyleRealizationSlider" ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="10" Value="{Binding Style_realization, Mode=TwoWay}" />
-            <Label x:Name="StyleRealizationLabel" Text="" />
-        </HorizontalStackLayout>
+            <VerticalStackLayout HorizontalOptions="Center" Margin="0, 0, 10, 0">
+                <Label Text="Atmosphere" TextColor="#FFFFFF"/>
+                <HorizontalStackLayout>
+                    <Slider x:Name="AtmosphereSlider" ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="5" Value="{Binding Atmosphere, Mode=TwoWay}" />
+                    <Label x:Name="AtmosphereLabel" Text="" TextColor="#FFFFFF"/>
+                </HorizontalStackLayout>
+            </VerticalStackLayout>
 
-        <Label Text="Individuality" />
-        <HorizontalStackLayout>
-            <Slider x:Name="IndividualitySlider" ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="10" Value="{Binding Individuality, Mode=TwoWay}" />
-            <Label  x:Name="IndividualityLabel" Text="" />
-        </HorizontalStackLayout>
-
-        <Label Text="Atmosphere" />
-        <HorizontalStackLayout>
-            <Slider x:Name="AtmosphereSlider" ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="5" Value="{Binding Atmosphere, Mode=TwoWay}" />
-            <Label x:Name="AtmosphereLabel" Text="" />
-        </HorizontalStackLayout>
-
-        <Label Text="Trendiness" />
-        <HorizontalStackLayout>
-            <Slider x:Name="TrendinessSlider"  ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="5" Value="{Binding Trendiness, Mode=TwoWay}" />
-            <Label  x:Name="TrendinessLabel" Text="" />
-        </HorizontalStackLayout>
+            <VerticalStackLayout HorizontalOptions="Center">
+                <Label Text="Trendiness" TextColor="#FFFFFF"/>
+                <HorizontalStackLayout>
+                    <Slider x:Name="TrendinessSlider"  ValueChanged="Slider_ValueChanged" Minimum="0" Maximum="5" Value="{Binding Trendiness, Mode=TwoWay}"/>
+                    <Label  x:Name="TrendinessLabel" Text="" TextColor="#FFFFFF"/>
+                </HorizontalStackLayout>
+            </VerticalStackLayout>
+        </StackLayout>
 
         <StackLayout Orientation="Horizontal">
-            <Button Text="Save" Clicked="Button_Clicked" />
-            <Button Text="Cancel" Clicked="Cancel" />
+            <Button Text="Save" Clicked="Button_Clicked" BackgroundColor="#505050"/>
+            <Button Text="Cancel" Clicked="Cancel" BackgroundColor="#505050"/>
         </StackLayout>
     </StackLayout>
 </ContentPage>
